<resources>
    <string name="app_name">ChroMDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_item_menu">Main</string>
    <string name="favorite_item_menu">favorite</string>
    <string name="full_movie_item_menu">fullmovie</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="year">Year</string>
    <string name="film">Film</string>
    <string name="extension">Extension function</string>
    <string name="image_description">image_description</string>
    <string name="genre">Genre</string>
    <string name="popular_tv">Популярное</string>
    <string name="top_rated">Высокий рейтинг</string>
    <string name="load_genres">Load Genres</string>
    <string name="genres">Genres</string>
    <string name="Adult_cb">Взрослый контент</string>
    <string name="content_provider">Contacts</string>
    <string name="default_address">Red Square, 1, Moscow</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Start</string>
    <string name="red_square">Москва, Красная площадь 1</string>
    <string name="history_tv">Вы смотрели</string>


</resources>