<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <CheckBox
        android:id="@+id/adult_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:text="@string/Adult_cb"
        android:textSize="@dimen/sp16"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:text="@string/popular_tv"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popular_list_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/base_margin"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:text="@string/top_rated"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/top_rated_list_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/base_margin"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>
</androidx.core.widget.NestedScrollView>

